fix: solve the dark mode problem - add back the toaster - solve flages problem in input phone

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@
   --text-light-clr: #f1f1f1;
 }
 
-[data-bs-theme="dark"] {
+[data-bs-theme='dark'] {
   --primary-clr: #005db5;
   --primary-clr-hover: #006edb;
   --accent-clr: #ffca19;
@@ -85,6 +85,10 @@ html {
 
 .font-libre-franklin {
   font-family: var(--app-font-alt);
+}
+
+.font-IBM-Plex-Serif {
+  font-family: 'IBM Plex Serif', serif !important;
 }
 
 html,
@@ -134,35 +138,6 @@ input[type='password']::-webkit-outer-spin-button {
     -webkit-box-shadow: 0 0 0px 1000px theme('colors.light-input') inset !important;
     -webkit-text-fill-color: theme('colors.light-text') !important;
     transition: background-color 9999s ease-in-out 0s !important;
-  }
-
-  /* Dark mode override */
-  .dark input:-webkit-autofill,
-  .dark input:-webkit-autofill:hover,
-  .dark input:-webkit-autofill:focus,
-  .dark textarea:-webkit-autofill,
-  .dark textarea:-webkit-autofill:hover,
-  .dark textarea:-webkit-autofill:focus,
-  .dark select:-webkit-autofill,
-  .dark select:-webkit-autofill:hover,
-  .dark select:-webkit-autofill:focus {
-    -webkit-box-shadow: 0 0 0px 1000px theme('colors.dark-bg') inset !important;
-    -webkit-text-fill-color: theme('colors.dark-text') !important;
-  }
-
-  /* Firefox (uses its own rules for autofill, here we just enforce colors) */
-  input:-moz-autofill,
-  textarea:-moz-autofill,
-  select:-moz-autofill {
-    box-shadow: 0 0 0px 1000px theme('colors.light-input') inset !important;
-    -moz-text-fill-color: theme('colors.light-text') !important;
-  }
-
-  .dark input:-moz-autofill,
-  .dark textarea:-moz-autofill,
-  .dark select:-moz-autofill {
-    box-shadow: 0 0 0px 1000px theme('colors.dark-bg') inset !important;
-    -moz-text-fill-color: theme('colors.dark-text') !important;
   }
 }
 
